--- a/style/main.css
+++ b/style/main.css
@@ -43,7 +43,7 @@ header nav a:hover{
 
 .filme-principal{
     font-size: 16px;
-    background: linear-gradient(rgba(0,0,0,0.50),rgba(0,0,0,0.50)100%), url('./img/capa-peakyBlinder.jpg');
+    background-image: linear-gradient(rgba(0,0,0,0.50),rgba(0,0,0,0.50)100%), url("./img/capa-peakyBlinder.jpg");
     background-position: 50%;
     height: 400px;
     background-size: cover;
